<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_textpad"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.light.niepaper.Activities.Notepad.textPad"
    tools:showIn="@layout/activity_text_pad">
    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_padding_small"
        android:layout_marginLeft="@dimen/margin_padding_tiny"
        android:layout_marginStart="@dimen/margin_padding_tiny"
        android:layout_marginTop="@dimen/margin_padding_tiny"
        android:hint="@string/enter_title"
        android:maxLines="1"
        android:padding="@dimen/margin_padding_tiny"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_large" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/edit_text_title"
        android:fillViewport="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_padding_tiny"
            android:paddingRight="@dimen/margin_padding_tiny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteY="-33dp">


            <com.light.niepaper.Customviews.LinedEditTextView
                android:id="@+id/edit_text_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadingEdge="vertical"
                android:gravity="top"
                android:hint="@string/enter_content"
                android:inputType="textMultiLine"
                android:padding="@dimen/margin_padding_normal"
                android:scrollbars="vertical"
                android:textSize="@dimen/text_size_xnormal" />


        </LinearLayout>

        <!--<FrameLayout-->
            <!--android:id="@+id/frame_layout"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="268dp"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:background="@color/white_overlay"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintHorizontal_bias="0.965"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintVertical_bias="0.962"-->
            <!--tools:layout_editor_absoluteY="227dp">-->

        <!--</FrameLayout>-->


</ScrollView>
</LinearLayout>