...
    <string name="title_activity_text_pad">TextPad</string>
    <string name="enter_title">Enter your title here, and add the extention `.txt`</string>
    <string name="enter_titles">Enter your title here, and add the extension `.png`</string>
    <string name="enter_titlem">Enter your title here, and add suffix mp3</string>
    <string name="enter_titlesh">Enter your title here</string>
    <string name="enter_content">Enter your content here</string>
    <string name="saveTextx">SAVE</string>
    <string name="shareText">SHARE</string>
    <string name="deleteTextx">DELETE</string>
    <string name="deleteDrawing">DELETE SKETCH</string>
    <string name="deleteConfirmation">Are you sure you want to clear the canvas?</string>
    <string name="groupname">Choose a name for the group</string>
    <string name="groupuser">Choose a user name</string>
    <string name="groupkey">Choose a key to help others connect</string>
    <string name="makegroup">Create Group</string>
...
