...
        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_overlay">
        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
            fab:fab_addButtonPlusIconColor="@color/textandeditview"
...
