...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_schedules"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.light.niepaper.Activities.Scheduler.Schedules"
    tools:showIn="@layout/activity_schedules">
    <ListView
        android:id="@+id/listViewschedule"
        android:layout_width="match_parent"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_menuscheduler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
            fab:fab_addButtonPlusIconColor="@color/textandeditview"
...
