...

    <LinearLayout
        android:id="@+id/listschedulelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/edit_sched_titles"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_sched_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listViewscheduler"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/schedmessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabscheduler"
...
