<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/savetext"
        android:title="@string/saveTextx"/>

    <item android:id="@+id/actionlog"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>